--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <style>
 body {
-  background-image: url('purple.png');
+  background-image: url('purple.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
